[package]
name = "nova"
version = "0.1.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2018"
description = "Recursive zkSNARKs without trusted setup"
documentation = "https://docs.rs/nova/"
readme = "README.md"
repository = "https://github.com/Microsoft/Nova"
license-file = "LICENSE"
keywords = ["Recursive zkSNARKs", "cryptography", "proofs"]

[dependencies]
merlin = "3.0.0"
digest = "0.9.0"
sha3 = "0.9.1"
rayon = "1.5.0"
itertools = "0.10.1"
group = "0.10.0"
ff = "0.10.0"
pasta_curves = "0.1.1"

[dev-dependencies]
rand = "0.8"
